# fuse-permfs

./: .clang-format  .gitignore  .travis.yml  README.md  example.yml  meson.build  reformat
.github/workflows/: main.yml
src/: dir.cpp  dir.hpp  file.cpp  file.hpp  fs.cpp  fs.hpp  main.cpp  path.cpp  path.hpp  perm.hpp  warp.cpp
test/: list_tests.py  test  test_basic.py
test/data/globs/: perm.yml
test/data/mode_fallthrough/: perm.yml
test/data/owner_fallthrough/: perm.yml
test/data/root/: perm.yml
test/data/subdir_override/: perm.yml
